Работа со строкам

--- a/Загадки 2-0.html
+++ b/Загадки 2-0.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>IfThenElse</title>
 <script>
-//*
+/*
 * Создаем объект "Игра в загадки" с методом "Загадать" и массивом "Массив загадок", состоящий из объектов "Загадка".
 * Объект "Загадка" имеет свойства "Загадка" и "Отгадка".
 * Свойство "Загадка" - строка.
@@ -13,11 +13,47 @@
 * По желанию можно сделать счетчик правильных ответов.
 */
 
-let zag = [];
-zag.push("Зимой и лето одним цыетом");
-zag.push("Висит груша, нельзя скушать");
-zag.push("Что жжет без огня?");
-
+let game = {
+	data: [
+	{
+		question: 'Зимой и летом одним цветом',
+		answer: [
+		'ёлочка',
+		'палочка',
+		'холодильник',
+		'кровища',
+		]
+	},
+	{
+		question: 'Висит груша - нельзя скушать',
+		answer: [
+		'лампочка',
+		'высоко висит',
+		]
+	},
+	],
+	run: function(){
+		alert('Привет!');
+		alert(this.data.length); // количество загадок
+		let counter = 0; // объявляем счетчик
+		for (let qwe of this.data) {
+			let ans = prompt(qwe.question).toLowerCase();
+			let flag = true; // флаг "Нет правильного ответа"
+			for (let a of qwe.answer) {
+				if (ans == a) {
+					alert('Ответ правильный!');
+					flag = false;
+					counter++; // увеличили счетчик, когда нашли правильный ответ
+			break;
+				}
+			}
+		if (flag) alert('Ответ неправильный!');
+		}
+	alert(counter); // количество правильных ответов
+	alert('Игра окончена!');
+	}
+}
+game.run();
 </script>
 </head>
 <body></body>
