--- a/JQкалендарь/7 Календарь JQuery.html
+++ b/JQкалендарь/7 Календарь JQuery.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Календарь</title>
-    <link rel="stylesheet" href="7 JQuery.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="7JQ.js"></script>
+    <link rel="stylesheet" href="7.css">
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="jquery.mask.js"></script>
+    <script src="7.js"></script>
 </head>
 <body>
-     <h1>Календарь</h1>
+    <h1>Календарь</h1>
     <p><input type="text" placeholder="Выберите дату"></p>
     <p><button type="button" class="getcalendar">Вызвать календарь</button></p>
     <p><button type="button" class="birthday">Пометить день рождения</button></p>
