исправлены ссылки на css и js

--- a/JQкалендарь/7 Календарь JQuery.html
+++ b/JQкалендарь/7 Календарь JQuery.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Календарь</title>
-    <link rel="stylesheet" href="7.css">
-    <script src="jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="7 JQuery.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="jquery.mask.js"></script>
-    <script src="7.js"></script>
+    <script src="7JQ.js"></script>
 </head>
 <body>
     <h1>Календарь</h1>
